CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2009 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.tuxpaint.org/

$Id$

2009.February.8 (0.9.22)
  * New Tools:
    ----------
    * Label - A tool to add text to a drawing, which can be modified or
      moved later.
      By Bruno Dilly <bruno.dilly@gmail.com> (GSOC 2008)
      With modifications and integration by
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

  * New Magic Tools:
    ----------------
    * Blinds - Close window blinds over your picture.
      Perspective - Change the image's perspective.
      Moasic Hexagon, Mosaic irregular, Mosaic square - Glass mosaic effects.
      Zoom - Zoom the image in or out.
      By Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Puzzle - Slide parts of your picture around like a sliding puzzle.
      By Adam 'foo-script' Rakowski <foo-script@o2.pl>
      with modifications by Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * ROYGBIV Rainbow - Draw a rainbow arc using solid colors of
      Red, Orange, Yellow, Green, Blue, Indigo and Violet.

    * Wet Paint - Draws a light coat of paint, and smudges at the same time.
      (Based on Smudge tool.  Requested by gallery artist Angela.)

  * Other Improvements:
    -------------------
    * Template images are now supported.  Similar to Starters, they are
      pre-drawn pictures to begin a new drawing with, accessed via the
      "New" dialog.  The "Eraser" tool will erase back to the original
      picture (rather than a solid color).

      Unlike Starters, they do not involve an immutable "layer" above the
      drawing.  They may be drawn over in their entirety.

    * After switching into, or out of, a magic tool, the canvas is updated.

    * Starter images can be in SVG (Scalable Vector Graphics) format.
      (Avoids loading PNG if SVG with the same name exists.)
